--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   color: #333;
 }
 header {
-  background: #2c3e50;
+  background: #0096FF;
   color: white;
   text-align: center;
   padding: 40px 20px;
