--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h2 {
 }
 footer {
   text-align: center;
-  background: #2c3e50;
+  background: #0096FF;
   color: white;
   padding: 20px;
   margin-top: 30px;
